<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hospital Management System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="registration_instruction">I do not have a username and password details. Click the button below to register</string>
    <string name="register_button">Admin Control Window</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="welcome">WELCOME</string>
    <string name="is_login">You have been successfully login </string>
    <string name="sign_up">Sign Up Now</string>
    
    <string name="all_patients">View Patients</string>
    <string name="new_patient">Add Patient</string>
    <string name="all_staffs">View Staffs</string>
    <string name="new_staff">Add Staff</string>
    <string name="payment_info">Payment Info</string>
    <string name="all_admissions">All Admissions</string>
    <string name="my_profile">My Profile</string>
    <string name="emergency_task">Emergency Services</string>
    
    
    <string name="username_textview">Username:</string>
    <string name="password_textview">Password:</string>
    <string name="submit">Submit</string>
    
    <!-- string ids for home.xml -->
    <string name="post_comment">Post Comment</string>
    <string name="go_back">Go back</string>
    <string name="all_patients_title">All Patients</string>
    <string name="passwords_not_same">Passwords don\'t match</string>
    
    <string name="patient_status">Current Status</string>
    <string name="patient_prescription">Prescriptions</string>
    <string name="patient_investigation">Investigations</string>
    <string name="patient_payment">Payments</string>
     
</resources>
