<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#d6eaf8"
    >
    
    <TextView
	     android:id="@+id/textViewad11ad"
	     style="@style/BlackText"
	     android:layout_height="wrap_content"
	     android:layout_alignParentTop="true"
	     android:layout_marginTop="211dp"
	     android:gravity="center"
	     android:textAppearance="?android:attr/textAppearanceLarge"
	     android:text="WELCOME! "
	     android:textColor="#2874a6"
	     android:textSize="24sp" />

    <Button
        android:id="@+id/new_staff"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignBaseline="@+id/all_staffs"
        android:layout_alignBottom="@+id/all_staffs"
        android:layout_alignLeft="@+id/new_patient"
        android:text="@string/new_staff" 
        android:textColor="#000"/>

    <Button
        android:id="@+id/all_admissions"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/emergency_info"
        android:layout_toRightOf="@+id/emergency_info"
        android:text="@string/all_admissions"
        android:textColor="#000" />

    <Button
        android:id="@+id/new_patient"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/all_patients"
        android:layout_toRightOf="@+id/all_patients"
        android:text="@string/new_patient"
        android:textColor="#000" />

    <Button
        android:id="@+id/Buttonad01"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/emergency_info"
        android:layout_below="@+id/emergency_info"
        android:layout_marginTop="25dp"
        android:text="All Transaction"
        android:textColor="#000" />

    <Button
        android:id="@+id/Buttonad02"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/all_admissions"
        android:layout_alignTop="@+id/Buttonad01"
        android:text="New Notice"
        android:textColor="#000" />

    <Button
        android:id="@+id/Buttonad03"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/Buttonad01"
        android:layout_alignRight="@+id/Buttonad02"
        android:layout_below="@+id/Buttonad01"
        android:layout_marginTop="30dp"
        android:text="All Appointment Requests"
        android:textColor="#000" />

    <Button
        android:id="@+id/emergency_info"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/all_staffs"
        android:layout_below="@+id/all_patients"
        android:layout_marginTop="128dp"
        android:text="@string/emergency_task"
        android:textColor="#000" />

    <Button
        android:id="@+id/all_staffs"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_above="@+id/all_admissions"
        android:layout_marginBottom="30dp"
        android:layout_toLeftOf="@+id/new_staff"
        android:text="@string/all_staffs"
        android:textColor="#000" />

    <Button
        android:id="@+id/all_patients"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/textViewad11ad"
        android:layout_below="@+id/textViewad11ad"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="18dp"
        android:text="@string/all_patients"
        android:textColor="#000" />

</RelativeLayout>

</ScrollView>