<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#08253c"
    tools:context=".CopyAdminActivity"
    >
    
    
    <TextView
	     android:id="@+id/textViewpt1"
	     style="@style/BlackText"
	     android:layout_height="wrap_content"
	     android:layout_alignParentTop="true"
	     android:layout_marginTop="211dp"
	     android:gravity="center"
	     android:textAppearance="?android:attr/textAppearanceLarge"
	     android:text="WELCOME! "
	     android:textColor="#FFFF00"
	     android:textSize="21sp" />

    <Button
        android:id="@+id/patient_stat"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/patient_pay"
        android:layout_below="@+id/patient_prescrip"
        android:layout_marginTop="14dp"
        android:text="@string/patient_status"
        android:textColor="#000"
        android:background="#abebc6" />

    <Button
        android:id="@+id/patient_prescrip"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/patient_stat"
        android:layout_below="@+id/textViewpt1"
        android:layout_marginTop="29dp"
        android:text="@string/patient_prescription"
        android:textColor="#000"
        android:background="#abebc6" />

    <Button
        android:id="@+id/patient_invest"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/patient_stat"
        android:layout_below="@+id/patient_stat"
        android:layout_marginTop="18dp"
        android:text="@string/patient_investigation"
        android:textColor="#000"
        android:background="#abebc6" />

    <Button
        android:id="@+id/patient_pay"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_below="@+id/patient_invest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/patient_payment"
        android:textColor="#000"
        android:background="#abebc6" />

</RelativeLayout>