<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#08253c"
    tools:context=".HospitalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/username"
        android:textColor="#ffffff"
        android:textSize="19sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/username_field"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:background="#ffffff"
        android:layout_alignStart="@+id/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/password"
        android:textColor="#ffffff"
        android:textSize="19sp"
        android:layout_below="@+id/username_field"
        android:layout_alignLeft="@+id/username_field"
        android:layout_alignStart="@+id/username_field"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ffffff"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:textColor="#000000" 
        android:background="#abebc6"
        android:textSize="21sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login with your username and password or request for new appointment"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="22sp"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/BlackText"
        android:id="@+id/textView"
        android:textStyle=""
        android:layout_below="@+id/login"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Request For Appointment"
        android:id="@+id/patient_request"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" 
        android:textColor="#000000"
        android:background="#abebc6"
        android:padding="10dp"
        android:textSize="20sp"/>

</RelativeLayout>
